; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_stemmer.c_gen_vowels_rus.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_stemmer.c_gen_vowels_rus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_vowels_rus = common dso_local global i64* null, align 8
@vowels_rus = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gen_vowels_rus() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %18, %0
  %3 = load i64*, i64** @_vowels_rus, align 8
  %4 = load i32, i32* %1, align 4
  %5 = sext i32 %4 to i64
  %6 = getelementptr inbounds i64, i64* %3, i64 %5
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %2
  %10 = load i32*, i32** @vowels_rus, align 8
  %11 = load i64*, i64** @_vowels_rus, align 8
  %12 = load i32, i32* %1, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i64, i64* %11, i64 %13
  %15 = load i64, i64* %14, align 8
  %16 = call i64 @conv_rus_win1251(i64 %15)
  %17 = getelementptr inbounds i32, i32* %10, i64 %16
  store i32 1, i32* %17, align 4
  br label %18

18:                                               ; preds = %9
  %19 = load i32, i32* %1, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %1, align 4
  br label %2

21:                                               ; preds = %2
  ret void
}

declare dso_local i64 @conv_rus_win1251(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
